# lumos

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  deny.toml  generated.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/hooks/: README.md  pre-commit
.github/scripts/: install-hooks.sh
.github/workflows/: auto-label-issues.yml  ci.yml  lumos-generate.example.yml  mirror-gitlab.yml  release.yml  security.yml  sync-changelog-to-docs.yml  uptime.yml
docs/: CODE_ROAST_REPORT.md  CONTENT-CALENDAR.md  EXECUTION_PLAN.md  FUTURE.md  VISION.md  architecture.md  cli-reference.md  execution-plan.md  faq.md  getting-started.md  marketing-website-spec.md  metrics.md  production-readiness-report.md  syntax-reference.md
docs/cli/: check-compat.md
docs/guides/: anchor-integration.md  client-side-interaction.md  error-handling-validation.md  migration-anchor.md  migration-typescript.md  solana-cli-integration.md  solv-jito-integration.md  usage-examples.md  web3js-integration.md
docs/launch/: discord-announcement.md  introducing-lumos.md  linkedin-post.md  press-kit.md  reddit-rust.md  reddit-solana.md  twitter-thread.md
docs/meta/: documentation-audit.md  llm-test-queries.txt  llm-test-results.md
docs/schema-evolution/: compatibility.md  migrations.md
docs/security/: fuzzing.md
docs/tools/: github-action.md
examples/: custom_derives.lumos  fixed_arrays.lumos  generics.lumos  type_aliases.lumos
examples/basic/: lumos.toml
(+30 files in other folders)
